Adjusting the spacing on mobile to reduce an overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -318,7 +318,7 @@ canvas {
 @media screen and (max-width: 500px) {
   .calculator {
     min-width: 90%;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
   }
 }
 
